# cpuid

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE.rst  NEWS.rst  README.md  README.rst  buildbot.py  config.py  giit.json  lock_version_resolve.json  resolve.json  waf  wscript
.github/: cpp-internal.yml  gcc-problem-matcher.json
.github/workflows/: build.yml  clang-format.yml  cmake.yml  cpp-internal.yml  cppcheck.yml  cxx_mkspecs.yml  dependabot.yml  linux_cmake.yml  linux_mkspecs.yml  macos_cmake.yml  macos_mkspecs.yml  nodebug.yml  raspberry_pi.yml  valgrind.yml  windows_cmake.yml  windows_mkspecs.yml
docs/: README.rst  conf.py  index.rst  license.rst  requirements.in  requirements.txt
docs/examples/: examples.rst  main.rst
docs/rst_templates/: helper_functions.rst
docs/user_api/: cpuinfo.rst  user_api.rst
examples/print_cpuinfo/: main.cpp  wscript_build
src/cpuid/: commandline_arguments.cpp  commandline_arguments.hpp  config.hpp  cpuid.cpp  cpuid_0_calls.hpp  cpuid_1_calls.hpp  cpuid_4_calls.hpp  cpuid_80000008_calls.hpp  cpuinfo.cpp  cpuinfo.hpp  cpuinfo_impl.hpp  cpuinfo_x86.hpp  extract_info.hpp  extract_vendor_id.hpp  extract_x86_flags.hpp  extract_x86_logic_core.hpp  init_cpuinfo_msvc_x86.hpp  init_cpuinfo_unknown.hpp  init_gcc_x86.hpp  init_ios_clang_arm.hpp  init_ios_llvm_arm.hpp  init_linux_gcc_arm.hpp  init_linux_gcc_x86.hpp  init_mac_llvm_x86.hpp  init_msvc_arm.hpp  init_msvc_x86.hpp  init_unknown.hpp  init_win32_msvc_x86.hpp  steinwurf_version.hpp  version.cpp  version.hpp  wscript_build  x86_logic_core.hpp
src/cpuid/detail/: cpuinfo_impl.hpp  extract_x86_flags.hpp  init_apple_gcc_arm.hpp  init_gcc_x86.hpp  init_ios_clang_arm.hpp  init_linux_gcc_arm.hpp  init_msvc_arm.hpp  init_msvc_x86.hpp  init_unknown.hpp
test/: commandline_arguments.cpp  commandline_arguments.hpp  cpuid_tests.cpp  wscript_build
test/src/: test_cpuinfo.cpp  test_cpuinfo_x86.cpp  test_steinwurf_version.cpp
